[gd_scene load_steps=2 format=3 uid="uid://64utmm05ihfe"]

[ext_resource type="Script" path="res://scripts/UI/pause_menu.gd" id="1_j4ua4"]

[node name="pause_menu" type="Control"]
process_mode = 2
layout_mode = 3
anchor_right = 0.281
anchor_bottom = 0.537
offset_right = 0.319977
offset_bottom = 3.35999
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j4ua4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
alignment = 1

[node name="ColorRect" type="ColorRect" parent="Panel/VBoxContainer/LabelContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.490196, 0.427451, 0.839216, 1)

[node name="Label" type="Label" parent="Panel/VBoxContainer/LabelContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "==Pause=="
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5

[node name="btn_mute" type="CheckButton" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Mute"
alignment = 1

[node name="btn_resume" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Resume
"

[node name="btn_option" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Options
"

[node name="ColorRect" type="ColorRect" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(1, 0.333333, 0.482353, 1)

[node name="btn_exit" type="Button" parent="Panel/VBoxContainer/ButtonContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
text = "Exit to main menu"

[connection signal="toggled" from="Panel/VBoxContainer/ButtonContainer/btn_mute" to="." method="_on_btn_mute_toggled"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonContainer/btn_resume" to="." method="_on_btn_resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonContainer/ColorRect/btn_exit" to="." method="_on_btn_exit_pressed"]
